- 組み込みの Smarty プラグインの追加
-- modifier
--- explode (文字列を，ある文字で分割して配列に変換する）
-- Filterは一貫してプラグインを使うように変更したため、add-project時の app/filter ディレクトリを削除。
- Ethna_Session#isAnonymous メソッドが状態を正しく取得できない場合があるバグを修正(thanks:longkey1)
-- http://ml.ethna.jp/pipermail/users/2008-February/000899.html
- 国際化に関する変更
-- デフォルトのタイムゾーンとして、date.timezone を 'Asia/Tokyo' に設定
-- Ethna_I18N クラス に setTimeZone メソッドを追加 (static呼出)

*** bug fix

- Ethna_Controller#getTemplatedir を無視してテンプレートディレクトリを決定していたバグを修正(thanks: hiko)
-- getTemplatedirメソッドをオーバライドしても強制的にロケールが付加されていた
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15570
- "ethna pear-local list -a" の実行結果がエラーになってしまうバグを修正
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=15760
- safe-mode が ON の際に、CacheManager_Localfile がディレクトリを生成できないので、tmp ディレクトリ直下にキャッシュファイルを作成するようにした
-- skel/skel.app_manager.php も修正
- APPID-ini.php が存在しない場合，またはURLが設定にない場合，デフォルトURLが HTTP_HOST で設定されていたが，末尾に / がなかったので修正
- フォームヘルパで自動的に出力されるhiddenタグの閉じ忘れを修正(thanks: id:syachi5150)
- ethna add-app-manager コマンドで生成されるファイル名およびクラス名が間違っていたバグを修正(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16137
- Validatorが出力するメッセージからフォーム名の後ろのスペースを削るように修正。(thanks: id:syachi5150)
-- https://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16336
- Smarty 拡張プラグインの wordwrap_i18n にアルファベットのみを渡した場合に正しい結果が返らないバグを修正
-- 末尾のスペースを取り除く挙動も wordwrap に合わせて削除
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=16839
- ethna add-test コマンドのヘルプが機能していなかったバグを修正
- iniディレクティブ date.timezone が設定されてないために、E_WARNING が PHP 5.3.0 で出ていたバグを修正

** 2.5.0-preview4

*** bug fix

- フォーム定義が配列で、Ethna_ActionForm#getHiddenVars の値を Ethna_ActionForm#setAppNE した場合、クロスサイトスクリプティング脆弱性が存在するバグを修正 (thanks: shuitic)
-- http://sourceforge.jp/ticket/browse.php?group_id=1343&tid=17332


** 2.5.0-preview3

*** features

- アクションフォームに関する変更
-- フォーム定義を多次元配列に対応させました (thanks: id:syachi5150)
--- http://d.hatena.ne.jp/syachi5150/20081022/1224676038